Improve speed of leaderboard query by retrieving players in bulk